Correct timeline data cell height

--- a/styles/widgets/base/scheduler.less
+++ b/styles/widgets/base/scheduler.less
@@ -1106,6 +1106,7 @@
                 align-items: stretch;
                 flex: 1 1 auto;
                 height: inherit;
+                min-height: @SCHEDULER_WORKSPACE_DATE_TABLE_CELL_HEIGHT;
             }
         }
 
