--- a/styles/widgets/generic/tabPanel.generic.less
+++ b/styles/widgets/generic/tabPanel.generic.less
@@ -4,16 +4,16 @@
 @GENERIC_TABPANEL_INSET_SHADOW_LEFT: inset @GENERIC_TABS_BORDER_WIDTH 0 @tabs-border-color;
 @GENERIC_TABPANEL_INSET_SHADOW_TOP: inset 0 @GENERIC_TABS_BORDER_WIDTH @tabs-border-color;
 @GENERIC_TABPANEL_INSET_SHADOW_RIGHT: inset -@GENERIC_TABS_BORDER_WIDTH 0 @tabs-border-color;
-@GENERIC_TABPANEL_INSET_SHADOW_BOTTOM: inset 0 -@GENERIC_TABS_BORDER_WIDTH @tabs-border-color;
+@GENERIC_TABPANEL_INSET_SHADOW_BOTTOM: inset 0 (-@GENERIC_TABS_BORDER_WIDTH) @tabs-border-color;
 
 .tabpanel-shadow-mixin(@accent-color) {
     & > .dx-tabpanel-tabs {
         .dx-tabs {
-            box-shadow: inset 0 -@GENERIC_TABS_BORDER_WIDTH @accent-color, @GENERIC_TABPANEL_INSET_SHADOW_TOP, @GENERIC_TABPANEL_INSET_SHADOW_RIGHT, @GENERIC_TABPANEL_INSET_SHADOW_LEFT;
+            box-shadow: inset 0 (-@GENERIC_TABS_BORDER_WIDTH) @accent-color, @GENERIC_TABPANEL_INSET_SHADOW_TOP, @GENERIC_TABPANEL_INSET_SHADOW_RIGHT, @GENERIC_TABPANEL_INSET_SHADOW_LEFT;
         }
 
         .dx-tab {
-            box-shadow: @GENERIC_TABPANEL_INSET_SHADOW_TOP, inset 0 -@GENERIC_TABS_BORDER_WIDTH @accent-color;
+            box-shadow: @GENERIC_TABPANEL_INSET_SHADOW_TOP, inset 0 (-@GENERIC_TABS_BORDER_WIDTH) @accent-color;
 
             &.dx-tab-selected {
                 box-shadow: inset 0 @GENERIC_TABS_BORDER_WIDTH @accent-color, inset -@GENERIC_TABS_BORDER_WIDTH 0 @accent-color, inset @GENERIC_TABS_BORDER_WIDTH 0 @accent-color;
@@ -23,11 +23,11 @@
         .dx-tabs-expanded {
             .dx-tab:not(.dx-tab-selected) {
                 &:first-of-type {
-                    box-shadow: inset 0 -@GENERIC_TABS_BORDER_WIDTH @accent-color, @GENERIC_TABPANEL_INSET_SHADOW_LEFT, @GENERIC_TABPANEL_INSET_SHADOW_TOP;
+                    box-shadow: inset 0 (-@GENERIC_TABS_BORDER_WIDTH) @accent-color, @GENERIC_TABPANEL_INSET_SHADOW_LEFT, @GENERIC_TABPANEL_INSET_SHADOW_TOP;
 
                     .dx-rtl&,
                     .dx-rtl & {
-                        box-shadow: inset 0 -@GENERIC_TABS_BORDER_WIDTH @accent-color, @GENERIC_TABPANEL_INSET_SHADOW_RIGHT, @GENERIC_TABPANEL_INSET_SHADOW_TOP;
+                        box-shadow: inset 0 (-@GENERIC_TABS_BORDER_WIDTH) @accent-color, @GENERIC_TABPANEL_INSET_SHADOW_RIGHT, @GENERIC_TABPANEL_INSET_SHADOW_TOP;
                     }
                 }
             }
@@ -36,22 +36,22 @@
         .dx-tabs-stretched {
             .dx-tab:not(.dx-tab-selected) {
                 &:last-of-type {
-                    box-shadow: inset 0 -@GENERIC_TABS_BORDER_WIDTH @accent-color, @GENERIC_TABPANEL_INSET_SHADOW_RIGHT, @GENERIC_TABPANEL_INSET_SHADOW_TOP;
+                    box-shadow: inset 0 (-@GENERIC_TABS_BORDER_WIDTH) @accent-color, @GENERIC_TABPANEL_INSET_SHADOW_RIGHT, @GENERIC_TABPANEL_INSET_SHADOW_TOP;
 
                     .dx-rtl&,
                     .dx-rtl & {
-                        box-shadow: inset 0 -@GENERIC_TABS_BORDER_WIDTH @accent-color, @GENERIC_TABPANEL_INSET_SHADOW_LEFT, @GENERIC_TABPANEL_INSET_SHADOW_TOP;
+                        box-shadow: inset 0 (-@GENERIC_TABS_BORDER_WIDTH) @accent-color, @GENERIC_TABPANEL_INSET_SHADOW_LEFT, @GENERIC_TABPANEL_INSET_SHADOW_TOP;
                     }
                 }
             }
         }
 
         .dx-tabs-nav-button-left {
-            box-shadow: inset 0 -@GENERIC_TABS_BORDER_WIDTH @accent-color, @GENERIC_TABPANEL_INSET_SHADOW_LEFT, @GENERIC_TABPANEL_INSET_SHADOW_TOP;
+            box-shadow: inset 0 (-@GENERIC_TABS_BORDER_WIDTH) @accent-color, @GENERIC_TABPANEL_INSET_SHADOW_LEFT, @GENERIC_TABPANEL_INSET_SHADOW_TOP;
         }
 
         .dx-tabs-nav-button-right {
-            box-shadow: inset 0 -@GENERIC_TABS_BORDER_WIDTH @accent-color, @GENERIC_TABPANEL_INSET_SHADOW_TOP, @GENERIC_TABPANEL_INSET_SHADOW_RIGHT;
+            box-shadow: inset 0 (-@GENERIC_TABS_BORDER_WIDTH) @accent-color, @GENERIC_TABPANEL_INSET_SHADOW_TOP, @GENERIC_TABPANEL_INSET_SHADOW_RIGHT;
         }
     }
 
