--- a/styles/widgets/generic/scheduler.generic.less
+++ b/styles/widgets/generic/scheduler.generic.less
@@ -33,7 +33,7 @@
     @GENERIC_SCHEDULER_APPOINTMENT_RECURRENCE_CONTENT_PADDING_RTL: 5px 7px 5px 25px;
 
     @GENERIC_SCHEDULER_AGENDA_APPOINTMENT_FONT_SIZE: 16px;
-    @GENERIC_SCHEDULER_GROUP_HEADER_AGENDA_FONT_SIZE: 18px;
+    @GENERIC_SCHEDULER_GROUP_HEADER_AGENDA_FONT_SIZE: 14px;
     @GENERIC_SCHEDULER_GROUP_HEADER_TABLE_CELL_WIDTH: 80px;
     @GENERIC_SCHEDULER_APPOINTMENT_TRANSPARENT_LEFT_BORDER: 3px solid transparent;
     @GENERIC_SCHEDULER_APPOINTMENT_TRANSPARENT_RIGHT_BORDER: 2px solid transparent;
@@ -92,6 +92,9 @@
 @GENERIC_SCHEDULER_SWITCHER_LABEL_OFFSET: 60px;
 
 @SCHEDULER_FIRST_OF_MONTH_BORDER: 1px solid @SCHEDULER_FIRST_MONTH_BORDER_COLOR;
+
+@GENERIC_SCHEDULER_AGENDA_TIME_CELL_PADDING: 10px;
+@GENERIC_SCHEDULER_AGENDA_GROUP_HEADER_PADDING: @GENERIC_SCHEDULER_AGENDA_TIME_CELL_PADDING 0 0 10px;
 
 .scheduler-mixin();
 
@@ -447,7 +450,6 @@
     }
 }
 
-.dx-scheduler-work-space-grouped.dx-scheduler-agenda,
 .dx-scheduler-work-space-grouped.dx-scheduler-work-space-vertical-grouped,
 .dx-scheduler-work-space-grouped.dx-scheduler-timeline {
     .dx-scheduler-group-row th,
@@ -655,6 +657,26 @@
 
     .dx-scheduler-group-header-content {
         width: @GENERIC_SCHEDULER_GROUP_HEADER_TABLE_CELL_WIDTH;
+        text-align: left;
+        padding: @GENERIC_SCHEDULER_AGENDA_GROUP_HEADER_PADDING;
+        box-shadow: inset 0 -1px 0 0 @SCHEDULER_ACCENT_BORDER_COLOR;
+    }
+
+    .dx-scheduler-time-panel-cell {
+        text-align: left;
+        padding-top: @GENERIC_SCHEDULER_AGENDA_TIME_CELL_PADDING;
+    }
+
+    .dx-scheduler-time-panel-cell,
+    .dx-scheduler-date-table-cell {
+        box-shadow: inset 0 -1px 0 0 @SCHEDULER_BASE_BORDER_COLOR;
+    }
+
+    .dx-scheduler-date-table-last-row {
+        .dx-scheduler-time-panel-cell,
+        .dx-scheduler-date-table-cell {
+            box-shadow: inset 0 -1px 0 0 @SCHEDULER_ACCENT_BORDER_COLOR;
+        }
     }
 
     .dx-scheduler-agenda-group-mixin(@GENERIC_SCHEDULER_GROUP_HEADER_TABLE_CELL_WIDTH);
