Bugfix colors of the marks in the form (T882067)

--- a/styles/widgets/generic/color-schemes/darkmoon/generic.darkmoon.less
+++ b/styles/widgets/generic/color-schemes/darkmoon/generic.darkmoon.less
@@ -1539,8 +1539,8 @@
 * @type color
 */
 @form-group-border-color: @base-icon-color;
-@form-field-required-color: saturate(darken(@form-field-item-color, 39.2%), 80%);
-@form-field-mark-color: darken(@form-field-item-color, 48.5%);
+@form-field-required-color: @base-danger;
+@form-field-mark-color: darken(@base-text-color, 44%);
 
 // Fieldset
 
