--- a/styles/widgets/generic/color-schemes/darkviolet/generic.darkviolet.less
+++ b/styles/widgets/generic/color-schemes/darkviolet/generic.darkviolet.less
@@ -1526,7 +1526,7 @@
 * @type color
 */
 @form-group-border-color: @base-selected-border;
-@form-field-required-color: saturate(darken(@form-field-item-color, 39.2%), 80%);
+@form-field-required-color: darken(@base-danger, 10%);
 @form-field-mark-color: darken(@form-field-item-color, 48.5%);
 
 // Fieldset
