--- a/styles/widgets/generic/color-schemes/light/generic.light.less
+++ b/styles/widgets/generic/color-schemes/light/generic.light.less
@@ -1519,8 +1519,8 @@
 * @type color
 */
 @form-group-border-color: @base-border-color;
-@form-field-required-color: saturate(lighten(@form-field-item-color, 39.3%), 80%);
-@form-field-mark-color: lighten(@form-field-item-color, 48.5%);
+@form-field-required-color: darken(@base-danger, 10%);
+@form-field-mark-color: lighten(@base-text-color, 48.5%);
 
 // Fieldset
 
