Fix layout in case of multiple button groups

--- a/styles/widgets/common/toolbar.less
+++ b/styles/widgets/common/toolbar.less
@@ -187,12 +187,24 @@
         background-color: transparent;
     }
 
-    .dx-buttongroup-wrapper {
-        flex-direction: column;
+    .dx-list-item-content {
+        padding: 0;
 
-        .dx-buttongroup-item {
-            border: none;
-            text-align: left;
+        .dx-toolbar-item-auto-hide {
+            padding: 0;
+        }
+    }
+
+    .dx-buttongroup {
+        width: 100%;
+
+        .dx-buttongroup-wrapper {
+            flex-direction: column;
+
+            .dx-buttongroup-item {
+                border: none;
+                text-align: left;
+            }
         }
     }
 }
