--- a/styles/widgets/generic/toolbar.generic.less
+++ b/styles/widgets/generic/toolbar.generic.less
@@ -210,10 +210,8 @@
 }
 
 .dx-toolbar-hidden-button-group {
-    .dx-toolbar-item-auto-hide {
-        padding-left: 0;
-        padding-right: 0;
-    }
+    margin-top: @GENERIC_TOOLBAR_ITEM_SPACING;
+    margin-bottom: @GENERIC_TOOLBAR_ITEM_SPACING;
 
     .dx-buttongroup-wrapper {
         .dx-buttongroup-item.dx-button {
