--- a/styles/widgets/material/toolbar.material.less
+++ b/styles/widgets/material/toolbar.material.less
@@ -249,13 +249,13 @@
 }
 
 .dx-toolbar-hidden-button-group {
-    .dx-toolbar-item-auto-hide {
-        padding-left: 0;
-        padding-right: 0;
-    }
+    margin-top: @MATERIAL_TOOLBAR_PADDING;
+    margin-bottom: @MATERIAL_TOOLBAR_PADDING;
 
     .dx-buttongroup-wrapper {
         .dx-buttongroup-item.dx-button {
+            box-shadow: none;
+
             .dx-button-content {
                 padding: @MATERIAL_TOOLBAR_PADDING @MATERIAL_LIST_ITEM_HORIZONTAL_PADDING;
             }
