--- a/styles/widgets/generic/color-schemes/carmine/generic.carmine.less
+++ b/styles/widgets/generic/color-schemes/carmine/generic.carmine.less
@@ -1587,8 +1587,8 @@
 * @type color
 */
 @form-group-border-color: #edc1b9;
-@form-field-required-color: saturate(lighten(@form-field-item-color, 39.3%), 80%);
-@form-field-mark-color: lighten(@form-field-item-color, 48.5%);
+@form-field-required-color: darken(@base-danger, 10%);
+@form-field-mark-color: lighten(@base-text-color, 55%);
 
 // Images
 @list-item-icon-toggle-delete-bg: data-uri('images/widgets/generic/color-schemes/light/list/delete.png');
