--- a/styles/widgets/generic/color-schemes/darkmoon/generic.darkmoon.less
+++ b/styles/widgets/generic/color-schemes/darkmoon/generic.darkmoon.less
@@ -1601,8 +1601,8 @@
 * @type color
 */
 @form-group-border-color: @base-icon-color;
-@form-field-required-color: saturate(darken(@form-field-item-color, 39.2%), 80%);
-@form-field-mark-color: darken(@form-field-item-color, 48.5%);
+@form-field-required-color: @base-danger;
+@form-field-mark-color: darken(@base-text-color, 44%);
 
 // Images
 @list-item-icon-toggle-delete-bg: data-uri('images/widgets/generic/color-schemes/dark/list/delete.png');
