add assetsBasePath support

--- a/themebuilder-scss/tests/data/scss/widgets/generic/accordion/_index.scss
+++ b/themebuilder-scss/tests/data/scss/widgets/generic/accordion/_index.scss
@@ -5,11 +5,12 @@
 @use "../sizes" as *;
 // adduse
 
-
+$font-file: "icons";
 
 .dx-accordion {
     background-color: $base-font-family;
     color: $accordion-title-color;
+    font: url("icons/#{$font-file}.woff2");
 
     .from-base {
         background-color: $accordion-item-title-opened-bg;
